tests/ui/unwind-multiple-arguments/expected
error: Exactly one Unwind Argument as Integer accepted
  --> main.rs:14:1
   |
14 | #[kani::unwind(10,5)]
   | ^^^^^^^^^^^^^^^^^^^^^
